[package]
name = "ds-rs"
version = "0.1.0"
edition = "2021"
description = "Data structures in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "binary_tree"
harness = false
