[package]
name = "ds-rs"
version = "0.1.0"
edition = "2021"
description = "Data structures in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
serde_json = "1.0.1"
rstest = "0.18.2"
rand = "0.8.5"

[features]
default = []
json = [ "dep:serde" ]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
indexing_slicing = "deny"
[[bench]]
name = "binary_tree"
harness = false
